Fix align

--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
 .greetings {
     display: none;
     font-size: x-large;
+    text-align: center;
 }
 
 .js-weather {
